tests/baselines/reference/interfaceWithMultipleBaseTypes2.errors.txt
==== tests/cases/compiler/interfaceWithMultipleBaseTypes2.ts (1 errors) ====
    interface Base {
        x: {
            a?: string; b: string;
        }
    }
    
    interface Base2 {
        x: {
            b: string; c?: number;
        }
    }
    
    interface Derived extends Base, Base2 {
        x: { b: string }
    }
    
    interface Derived2 extends Base, Base2 { // error
              ~~~~~~~~
!!! interfaceWithMultipleBaseTypes2.ts(17,11): error TS2143: Interface 'Derived2' cannot extend interface 'Base':
!!! 	Types of property 'x' of types 'Derived2' and 'Base' are incompatible:
!!! 		Types of property 'a' of types '{ a: number; b: string; }' and '{ a?: string; b: string; }' are incompatible.
        x: { a: number; b: string }
    }
    
    interface Derived3 extends Base, Base2 {
        x: { a: string; b: string }
    }
    
    